# rust-cms

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  init.sql  migration.sh
docker/release/: docker-compose.yml
migrations/2019-05-19-180407_create_users/: up.sql
migrations/2019-05-25-004856_create_sections/: down.sql  up.sql
src/: auth.rs  catchers.rs  main.rs  other.rs
src/endpoints/: catchers.rs  mod.rs
src/endpoints/auth/: mod.rs  user_auth.rs
src/endpoints/lib/: mod.rs  models.rs  schema.rs
src/endpoints/sections/: mod.rs
src/endpoints/users/: mod.rs
src/lib/: schema.rs
