[package]
name = "rust-cms"
version = "0.1.0"
authors = ["Steven Beshensky <s.beshensky@gmail.com>"]
edition = "2018"

[global.limits]
json = 5242880

[dependencies]
chrono = "0.4"
rocket = "0.4.10"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
diesel = { version = "1.4.2", features = ["postgres"] }
r2d2_postgres = "0.16.0"
dotenv = "0.14.1"
bcrypt = "0.4"
frank_jwt = "3.1.1"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "helmet"]